--- a/src/styles/iconfont.css
+++ b/src/styles/iconfont.css
@@ -1,15 +1,23 @@
 @font-face {
-  font-family: "iconfont";
-  src: url("iconfont.woff2") format("woff2"),
-    url("iconfont.woff") format("woff"), url("iconfont.ttf") format("truetype");
+  font-family: "iconfont"; /* Project id 3028487 */
+  src: url("//at.alicdn.com/t/font_3028487_6gw92yu0iht.woff2?t=1639843108074")
+      format("woff2"),
+    url("//at.alicdn.com/t/font_3028487_6gw92yu0iht.woff?t=1639843108074")
+      format("woff"),
+    url("//at.alicdn.com/t/font_3028487_6gw92yu0iht.ttf?t=1639843108074")
+      format("truetype");
 }
 
 .iconfont {
   font-family: "iconfont" !important;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-check-item1:before {
+  content: "\e601";
 }
 
 .icon-complete:before {
@@ -26,8 +34,4 @@
 
 .icon-close:before {
   content: "\e747";
-}
-
-.icon-square:before {
-  content: "\e7d1";
 }
