页面补全, subtodo 和 comment 页面待完善

--- a/src/styles/todo/detail.scss
+++ b/src/styles/todo/detail.scss
@@ -38,4 +38,9 @@ $detail-button-div-height: 22px;
   display: grid;
   grid-template-columns: 30px 1fr;
   place-items: start start;
+
+  .iconfont {
+    font-size: 18px;
+    font-weight: 570;
+  }
 }
